--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "sass": "^1.35.1"
+  },
+  "dependencies": {
+    "node-sass": "^6.0.1"
   }
 }
